// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android AnimateAndFade should render correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;

exports[`Android AnimateAndFade should render correctly when show is false 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": 0.01,
      "opacity": 0,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;

exports[`Android AnimateAndFade should render correctly with animateOnEnter 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": 0.01,
      "opacity": 0,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;

exports[`Android AnimateAndFade should render correctly with animateOnLeave 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </Text>
  </View>
</View>
`;
